In the middle of too many things